# github-to-slack-notifier

./: .dockerignore  .gitignore  .releaserc  Dockerfile  README.md  action.yml  docker-bake.hcl  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: code-scanning.yml  docker-build.yml  docker-release.yml  release.yml  tag.yml  test.yml
src/: exceptions.py  main.py
src/clients/github/: github_graphql.py  graphql.py  queries.py
src/clients/slack/: client.py
tests/: test_main.py
tests/clients/github/: test_github_graphql.py
tests/clients/slack/: test_slack.py
