[tool.poetry]
name = "github-to-slack-notifier"
version = "0.1.0"
description = "Github Action to send a Slack DM"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.1"
requests-mock = "^1.12.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
