[tool.poetry]
name = "github-to-slack-notifier"
version = "0.1.0"
description = "Github Action to send a Slack DM"
authors = ["devops@rewind.io"]
readme = "README.md"
package-mode = false # Adding since don't need module and using src as directory

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.33.0"
slack-sdk = "^3.31.0"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
pytest = "^8.3.1"
requests-mock = "^1.12.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
